@@ -17,3 +17,4 @@ depth: 1
  * Fix image uploads on storage backends that require file pointer to be at the start of the file (Matt Westcott)
  * Fix "Edit this page" missing from userbar (Satvik Vashisht)
  * Prevent audit log report from failing on missing models (Andy Chosak)
+ * Fix page/snippet cannot proceed a `GroupApprovalTask` if it's locked by someone outside of the group (Sage Abdullah)
